--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Floripa IA</title>
+    <title>IA Floripa</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <style>
         body {
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <header>Floripa IA</header>
+    <header>IA Floripa</header>
     <p>A IA Floripa fornece serviços de treinamento e aplicações de ferramentas de Inteligência Artificial para indivíduos e empresas, com ênfase no uso de Modelos de Linguagem Grandes para processamento de conhecimento e informação.</p>
 </body>
 </html>
