--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         function showEmail() {
             let captcha = prompt("Digite 'IA' para ver o e-mail:");
             if (captcha === "IA") {
-                let encodedEmail = "yne.surilvvlrqdo@jpdlo.frp";
+                let encodedEmail = "ixo.cebsvffvbany@tznvy.pbz";
                 let decodedEmail = encodedEmail.replace(/[a-z]/g, c => 
                     String.fromCharCode((c.charCodeAt(0) - 97 - 13 + 26) % 26 + 97)
                 );
